--- a/public/404.html
+++ b/public/404.html
@@ -13,19 +13,7 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Set up" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="" />
-
-
-
-
-
-
-
-
-
-
-
-
+<meta property="og:url" content="http://hyperparameter.space/404.html" />
 
 
 
@@ -35,7 +23,7 @@
      404 Page not found 
 
 </title>
-<link rel="canonical" href="">
+<link rel="canonical" href="http://hyperparameter.space/404.html">
 <script type="text/javascript" async
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   MathJax.Hub.Config({
@@ -81,9 +69,9 @@
 
 
     
-    <link rel="stylesheet" href="http://hyperparameter.space/css/reset.css?t=2018-12-30%2014%3a32%3a27.973687954%20-0800%20PST">
-    <link rel="stylesheet" href="http://hyperparameter.space/css/pygments.css?t=2018-12-30%2014%3a32%3a27.973687954%20-0800%20PST">
-    <link rel="stylesheet" href="http://hyperparameter.space/css/main.css?t=2018-12-30%2014%3a32%3a27.973687954%20-0800%20PST">
+    <link rel="stylesheet" href="http://hyperparameter.space/css/reset.css?t=2019-07-08%2009%3a19%3a37.187821%20-0700%20PDT%20m%3d%2b0.113671857">
+    <link rel="stylesheet" href="http://hyperparameter.space/css/pygments.css?t=2019-07-08%2009%3a19%3a37.187821%20-0700%20PDT%20m%3d%2b0.113671857">
+    <link rel="stylesheet" href="http://hyperparameter.space/css/main.css?t=2019-07-08%2009%3a19%3a37.187821%20-0700%20PDT%20m%3d%2b0.113671857">
     
 
 
@@ -97,20 +85,21 @@
 
 
 
-  <link href="http://hyperparameter.space/index.xml" rel="alternate" type="application/rss+xml" title="Hyperparameter Space" />
 
 
 
 
-
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-102686929-1', 'auto');
-ga('send', 'pageview');
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-102686929-1', 'auto');
+	
+	ga('send', 'pageview');
+}
 </script>
 
 </head>
@@ -216,12 +205,16 @@ ga('send', 'pageview');
 </section>
 
 
-<script>
-window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-ga('create', 'UA-102686929-1', 'auto');
-ga('send', 'pageview');
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'UA-102686929-1', 'auto');
+	
+	ga('send', 'pageview');
+}
 </script>
-<script async src='//www.google-analytics.com/analytics.js'></script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 
 
 
